[workspace]
members = [
    "cli",
    "core",
    "fuse",
    "http",
    "http/client",
]
resolver = "2"

[package]
name = "peershare"
version = "0.1.0"
edition = "2021"

[features]
fuse = ["peershare-fuse"]

[dependencies]
anyhow = "1.0.71"
async-std = { version = "1.12.0", features = ["attributes"] }
caps = "0.5.5"
clap = { version = "4.3.3", features = ["derive"] }
dirs-next = "2.0.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.18"
peershare-core = { version = "0.1", path = "core" }
peershare-fuse = { version = "0.1", path = "fuse", optional = true }
peershare-http = { version = "0.1", path = "http" }
serde_json = "1.0.97"
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
