[package]
name = "peershare-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
peershare-core = { version = "0.1", path = "../core" }
peershare-fuse = { version = "0.1", path = "../fuse" }
peershare-http = { version = "0.1", path = "../http" }
peershare-http-client = { version = "0.1", path = "../http/client" }
caps = "0.5.5"
clap = { version = "4.3.3", features = ["derive"] }
dirs-next = "2.0.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.18"
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
url = "2.4.0"
