[package]
name = "peershare-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
open = "5.0.0"
peershare-core = { version = "0.1", path = "../core" }
peershare-http-client = { version = "0.1", path = "../http/client" }
serde_json = "1.0.107"
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
url = "2.4.0"
