[package]
name = "peershare-packager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive"] }
env_logger = "0.10.0"
peershare-core = { version = "0.1", path = "../core" }
peershare-http-client = { version = "0.1", path = "../http/client" }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
